# q-learning-project

./: .gitignore  README.md
doc/: README.md
doc/dev/: git-hooks.md  pre-commit  pre-commit.py  pre-push
plan/: project-plan.md
src/: CMakeLists.txt  Physics.cpp  README.md
src/GUI/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mycanvas.cpp  mycanvas.h  q-learningGUI.pro  qsfmlwidget.cpp  qsfmlwidget.h  ui_mainwindow.h
src/assets/: help.txt
src/bot/: CMakeLists.txt  body.cpp  body.hpp  bot.hpp  brain.cpp  brain.hpp  main.cpp  matrix.hpp  qlearning.cpp  qlearning.hpp
src/bot/brain/: CMakeLists.txt
src/exceptions/: CMakeLists.txt  body-exceptions.cpp  body-exceptions.hpp  qlearning-exception.cpp  qlearning-exception.hpp  qlearning-runtime-exception.cpp  qlearning-runtime-exception.hpp
src/gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mycanvas.cpp  mycanvas.h  q-learningGUI.pro  qsfmlwidget.cpp  qsfmlwidget.h  ui_mainwindow.h
src/libs/Box2D/: CMakeLists.txt
src/libs/Box2D/Box2D/Common/: b2Math.h
src/qlearn/: CMakeLists.txt  main.cpp  qlearn.cpp  qlearn.hpp
src/sfml/: CMakeLists.txt  main.cpp  sfml-drawer.cpp  sfml-drawer.hpp
src/test/: CMakeLists.txt  test_utils.cpp  test_utils.hpp
src/test/bottest/: CMakeLists.txt  body_test.cpp  main.cpp  qlearning_test.cpp
src/test/example/: CMakeLists.txt  main.cpp  test.cpp
src/world/: CMakeLists.txt  physics.cpp  physics.hpp  physics_main.cpp
