SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")

SET(CMAKE_MODULE_PATH  "${PROJECT_SOURCE_DIR}/libs")
FIND_PACKAGE(SFML REQUIRED system window graphics network audio)
IF(SFML_FOUND)
    INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})
ENDIF()

SET(SFMLSOURCES SFMLDrawer)
SET(BOTSOURCES BotBrain QLearning BotBody)
SET(PHYSICSSOURCES Physics)
SET(EXCEPTIONSOURCES BodyExceptions QLearningException)

ADD_LIBRARY(QLearnStarter qlearn.cpp)
SET(QLEARNLIB QLearnStarter)

ADD_EXECUTABLE(qlearn main.cpp)

TARGET_LINK_LIBRARIES(qlearn
        ${QLEARNLIB}
        ${SFMLSOURCES}
        ${SFML_LIBRARIES}
        ${BOTSOURCES}
        ${EXCEPTIONSOURCES}
        ${PHYSICSSOURCES}
        Box2D
)